migrations , màj base.html css màj index.html : rendu après login màj nav.html appelé par base.html màj views.py , unversioned files

--- a/LITReview/feeds/templates/partials/base.html
+++ b/LITReview/feeds/templates/partials/base.html
@@ -25,7 +25,7 @@
 <body>
     {% include 'partials/nav.html' %}
 
-    <div class="container">
+    <div style="max-width:100%" class="container">
 
         {% block content %}
 
