--- a/LITReview/feeds/templates/partials/nav.html
+++ b/LITReview/feeds/templates/partials/nav.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-info bg-info">
-    <div class="container">
+    <div style="max-width:100%" class="container">
         {% if user.is_authenticated %}
-        <a class="navbar-brand text-white" href="{% url 'dashboard-index' %}">KenInventory</a>
+        <a class="navbar-brand text-white" href="{% url 'index' %}">KenInventory</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -10,13 +10,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link text-white" href="{% url 'dashboard-index' %}">Dashboard <span
+                    <a class="nav-link text-white" href="{% url 'index' %}">Dashboard <span
                             class="sr-only">(current)</span></a>
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link text-white" href="{% url 'user-profile' %}">{{ user.username }} Profile
+                    <a class="nav-link text-white" href="{% url 'index' %}">{{ user.username }} Profile
                         <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
