frontend + form + màj views.py et index.html ajout des nouvelles entrées créées

--- a/LITReview/feeds/templates/index.html
+++ b/LITReview/feeds/templates/index.html
@@ -11,32 +11,26 @@
         <div><h6><b style="background:lightblue">{{ item.title }} </b>
         <i style="background:pink">from {{ item.user }} </i>
         <i style="background:lightgreen">at {{ item.time_created }} </i>
-        {{ item.description }}</h6>
+        <i style="background:yellow">{{ item.description }} </i></h6>
+        {% for element in reviews %}
+            {% if element.ticket == item or element.ticket != item %}
+                {% if forloop.counter == reviews|length %}
+                    <div onclick="pchild=this.getElementsByTagName('div');
+                    if(pchild[0].style.visibility!='hidden'){pchild[0].style.visibility='hidden';
+                    pchild[0].style.height='0';}else{pchild[0].style.visibility=''; pchild[0].style.height=''}">
+                    <b>Click here to add reviews no matter if there already are or not.</b><hr>
+                    <div style="visibility:hidden;height:0">
+                    {% include 'partials/review.html' with ticket_id=item.id %}<hr></div></div>
+                {% endif %}
+            {% endif %}
+        {% endfor %}
         {% for element in reviews %}
             {% if element.ticket == item %}
-            {% if forloop.counter == 1 %}
-                <div onclick="pchild=this.getElementsByTagName('div');
+                <div style="background:lightblue" onclick="pchild=this.getElementsByTagName('div');
                 if(pchild[0].style.visibility!='hidden'){pchild[0].style.visibility='hidden';
                 pchild[0].style.height='0';}else{pchild[0].style.visibility=''; pchild[0].style.height=''}">
-                <b>Click here to add reviews in addition to those already here.</b>
-                <div style="visibility:hidden;height:0"><br>{% include 'partials/form.html' %}</div></div>
-                <hr>
-                <div onclick="pchild=this.getElementsByTagName('div');
-                if(pchild[0].style.visibility!='hidden'){pchild[0].style.visibility='hidden';
-                pchild[0].style.height='0';}else{pchild[0].style.visibility=''; pchild[0].style.height=''}">
-                <b>Reviews have been added to this ticket. Click here to see them.</b>
-                <div style="visibility:hidden;height:0"><br>{{ element.body }}<hr>
-            {% elif forloop.counter > 1 %}
-                {{ element.body }}</div></div>
-            {% endif %}
-            {% else %}
-            {% if forloop.counter == 1 %}
-                <div onclick="pchild=this.getElementsByTagName('div');
-                if(pchild[0].style.visibility!='hidden'){pchild[0].style.visibility='hidden';
-                pchild[0].style.height='0';}else{pchild[0].style.visibility=''; pchild[0].style.height=''}">
-                <b>No reviews were added to this ticket yet. Click here to add ones.</b>
-                <div style="visibility:hidden;height:0"><br>{% include 'partials/form.html' %}</div></div>
-            {% endif %}
+                <b>Click here to see the number {{forloop.counter}} review corresponding to this ticket.</b>
+                <div style="visibility:hidden;height:0"><br>{{ element.body }}<hr></div></div>
             {% endif %}
         {% endfor %}
         <hr></div>
