--- a/LITReview/feeds/templates/index.html
+++ b/LITReview/feeds/templates/index.html
@@ -8,10 +8,10 @@
 {% block content %}
     <h1>Tickets List</h1>
     {% for item in tickets %}
-        <div><h6><b style="background:lightblue">{{ item.title }} </b>
+        <div><h6><b style="background:lightblue">{{ item.title }}
         <i style="background:pink">from {{ item.user }} </i>
         <i style="background:lightgreen">at {{ item.time_created }} </i>
-        <b style="background:#FED8B1">: {{ item.description }} </b></h6>
+        <b style="background:#FED8B1">: {{ item.description }} </b></b></h6>
         {% for element in reviews %}
             {% if element.ticket == item or element.ticket != item %}
                 {% if forloop.counter == reviews|length %}
@@ -30,8 +30,9 @@
                 if(pchild[0].style.visibility!='hidden'){pchild[0].style.visibility='hidden';
                 pchild[0].style.height='0';}else{pchild[0].style.visibility=''; pchild[0].style.height=''}">
                 <b>Click here to see this ticket review <i style="background:pink">from {{element.user}} </i>
-                <i style="background:lightgreen">at {{element.time_created}} </i></b>
-                <div style="visibility:hidden;height:0"><br>{{ element.body }}<hr></div></div>
+                <i style="background:lightgreen">at {{element.time_created}} </i>
+                <i style="color:white;background:red">(Rating {{element.rating}}) </i></b>
+                <div style="visibility:hidden;height:0"><br>{{ element.body }} <hr></div></div>
             {% endif %}
         {% endfor %}
         <hr></div>
