--- a/LITReview/feeds/templates/partials/base.html
+++ b/LITReview/feeds/templates/partials/base.html
@@ -1,6 +1,5 @@
 {% load static %}
-<!doctype html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <!-- Required meta tags -->
@@ -22,7 +21,7 @@
     <title>{% block title %}{% endblock %}</title>
 </head>
 
-<body>
+<body style="background:#F5F5DC">
     {% include 'partials/nav.html' %}
 
     <div style="max-width:100%" class="container">
