--- a/LITReview/feeds/templates/review.html
+++ b/LITReview/feeds/templates/review.html
@@ -20,10 +20,10 @@
   </div>
   <div class="form-check">
     <input type="checkbox" class="form-check-input" id="exampleCheck1">
-    <label class="form-check-label" for="exampleCheck1">Confirm the review</label>
+    <label class="form-check-label" for="exampleCheck1">Confirm the Review</label>
   </div>
   <input type="hidden" name="ticket" value="{{ ticket_id }}" />
-  <button type="submit" class="btn btn-primary">Submit the review</button>
+  <button type="submit" class="btn btn-primary">Submit the Review</button>
 </form>
 </body>
 </html>
