--- a/LITReview/feeds/templates/created_tickets.html
+++ b/LITReview/feeds/templates/created_tickets.html
@@ -6,54 +6,67 @@
 </head>
 <body>
 {% block content %}
-    <div style="background:#F5F5DC" onclick="pchild=this.getElementsByTagName('div');
-    if(pchild[0].style.visibility!='hidden'){pchild[0].style.visibility='hidden';
-    pchild[0].style.height='0';}else{pchild[0].style.visibility=''; pchild[0].style.height=''}">
-    <h4>Welcome {{user}}, here is your tickets list. <br>Click here to add new tickets to this list. </h4>
+<style>
+    #ticket_title {
+      background: lightblue;}
+    #ticket_user {
+      background: pink;}
+    #ticket_time_created {
+      background: lightgreen;}
+    #ticket_description {
+      background: #FED8B1;}
+    #review_datas {
+      background: #DCDCDC;}
+    #review_user {
+      background: pink;}
+    #review_time_created {
+      background: lightgreen;}
+    #review_rating {
+      background: lightblue;}
+</style>
+    <div class="spoiler">
+    <h4>Welcome {{user}}, here is your tickets list. <br>
+        Click here to add new tickets to this list. </h4>
     <div style="visibility:hidden;height:0">
-    {% include 'ticket.html' %}</div></div><hr>
-    {% for item in tickets %}
-        {% if item.user != user %}
-            {% if forloop.counter == tickets|length %}
-                <div style="background:#F5F5DC" onclick="pchild=this.getElementsByTagName('div');
-                if(pchild[0].style.visibility!='hidden'){pchild[0].style.visibility='hidden';
-                pchild[0].style.height='0';}else{pchild[0].style.visibility=''; pchild[0].style.height=''}">
-                <b>There aren't any ticket that you created yet, so click here to add new tickets. </b>
-                <div style="visibility:hidden;height:0">
-                {% include 'review.html' with ticket_id=item.id %} </div></div>
-            {% endif %}
-        {% endif %}
-        {% if item.user == user %}
-            <div><b style="background:lightblue">{{ item.title }}
-            <i style="background:pink">from {{ item.user }} </i>
-            <i style="background:lightgreen">at {{ item.time_created }} </i>
-            <i style="background:#FED8B1">: {{ item.description }} </i></b>
-            {% for element in reviews %}
-                {% if element.ticket == item or element.ticket != item %}
-                    {% if forloop.counter == reviews|length %}
-                        <div style="background:#F5F5DC" onclick="pchild=this.getElementsByTagName('div');
-                        if(pchild[0].style.visibility!='hidden'){pchild[0].style.visibility='hidden';
-                        pchild[0].style.height='0';}else{pchild[0].style.visibility=''; pchild[0].style.height=''}">
-                        <b>Click here to add reviews to this ticket no matter if there already are or not. </b>
-                        <div style="visibility:hidden;height:0">
-                        {% include 'review.html' with ticket_id=item.id %} </div></div>
-                    {% endif %}
-                {% endif %}
+    {% include 'ticket_form_2.html' %}</div></div><hr>
+    {% if tickets_count == 0 %}
+        <div class="spoiler">
+        <b>There isn't any ticket that you created yet, so click here to add new tickets. </b>
+        <div style="visibility:hidden;height:0">
+        {% include 'ticket_form_2.html' with ticket_id=ticket.id %}</div></div>
+    {% endif %}
+    {% for ticket in tickets %}
+        {% if ticket.user == user %}
+            <div><i id="ticket_user">From {{ ticket.user }}, </i>
+            <i id="ticket_time_created">at {{ ticket.time_created }} </i>
+            <i id="ticket_title" >for {{ ticket.title }}. </i>
+            <i id="ticket_description">Query : {{ ticket.description }} </i>
+            <details><summary>Click here to see the already existing reviews for this ticket. </summary>
+            {% for review in reviews %}
+                {% with ticket as ticket %}
+                {% with review as review %}
+                    <div id="review_datas">{% include 'included_reviews.html' %}</div>
+                {% endwith %}
+                {% endwith %}
             {% endfor %}
-            {% for element in reviews %}
-                {% if element.ticket == item %}
-                    <div style="background:#DCDCDC" onclick="pchild=this.getElementsByTagName('div');
-                    if(pchild[0].style.visibility!='hidden'){pchild[0].style.visibility='hidden';
-                    pchild[0].style.height='0';}else{pchild[0].style.visibility=''; pchild[0].style.height=''}">
-                    <b>Click here to see this ticket review <i style="background:pink">from {{element.user}} </i>
-                    <i style="background:lightgreen">at {{element.time_created}} </i>
-                    <i style="color:white;background:red">(Rating {{element.rating}}) </i></b>
-                    <div style="visibility:hidden;height:0">{{ element.body }} </div></div>
-                {% endif %}
-            {% endfor %}
-            <hr></div>
+            </details><hr></div>
         {% endif %}
     {% endfor %}
+<script>
+    var spoilers = document.getElementsByClassName("spoiler");
+    var spoilClick = function(){
+        pchild=this.getElementsByTagName('div');
+        if(pchild[0].style.visibility!='hidden'){
+            pchild[0].style.visibility='hidden';
+            pchild[0].style.height='0';
+        }else{
+            pchild[0].style.visibility=''; pchild[0].style.height=''
+        }
+    }
+    for (var i = 0; i < spoilers.length; i++) {
+    spoilers[i].addEventListener('click', spoilClick, false);
+    }
+</script>
 {% endblock %}
 </body>
 </html>
