--- a/LITReview/feeds/templates/partials/nav.html
+++ b/LITReview/feeds/templates/partials/nav.html
@@ -13,6 +13,14 @@
                     <a class="nav-link text-white" href="{% url 'created_tickets' %}">CreatedTickets <span
                             class="sr-only">(current)</span></a>
                 </li>
+                <li class="nav-item active">
+                    <a class="nav-link text-white" href="{% url 'submitted_reviews' %}">SubmittedReviews <span
+                            class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link text-white" href="{% url 'manage_follows' %}">ManageFollows <span
+                            class="sr-only">(current)</span></a>
+                </li>
             </ul>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
