--- a/LITReview/feeds/templates/follows_reviews.html
+++ b/LITReview/feeds/templates/follows_reviews.html
@@ -26,10 +26,10 @@
       background: lightblue;}
 </style>
     <div><h4>Welcome {{user}}, here is the tickets list, <br>
-    from which you submitted your reviews. </h4></div><hr>
+    from which your follows submitted reviews. </h4></div><hr>
     {% if not reviewed_tickets %}
         <a href="{% url 'index' %}">
-        <b>There isn't any ticket that you reviewed yet, so take a look on the tickets here. </b></a>
+        <b>There is no ticket that your follows reviewed, so take a look on all the tickets here. </b></a>
     {% endif %}
     {% for ticket in reviewed_tickets %}
         <div><i id="ticket_user">From {{ ticket.user }}, </i>
@@ -39,16 +39,18 @@
         {% for review in reviews %}
             {% if forloop.counter == reviews|length %}
                 <div class="spoiler">
-                <b>Click here to add reviews to this ticket in addition to those you already submitted. </b>
+                <b>Click here to add reviews to this ticket in addition to those your follows submitted. </b>
                 <div style="visibility:hidden;height:0">
-                {% include 'review_form_3.html' with ticket_id=ticket.id %}</div></div>
+                {% include 'review_form_5.html' with ticket_id=ticket.id %}</div></div>
             {% endif %}
         {% endfor %}
-        <details><summary>Click here to see the reviews that you submitted for this ticket. </summary>
+        <details><summary>Click here to see the reviews your follows submitted for this ticket. </summary>
         {% for review in reviews %}
             {% with ticket as ticket %}
             {% with review as review %}
-                <div id="review_datas">{% include 'included_reviews_2.html' %}</div>
+            {% with user_follows as user_follows %}
+                <div id="review_datas">{% include 'included_reviews_3.html' %}</div>
+            {% endwith %}
             {% endwith %}
             {% endwith %}
         {% endfor %}
