--- a/LITReview/feeds/templates/partials/nav.html
+++ b/LITReview/feeds/templates/partials/nav.html
@@ -21,6 +21,18 @@
                     <a class="nav-link text-white" href="{% url 'manage_follows' %}">ManageFollows <span
                             class="sr-only">(current)</span></a>
                 </li>
+                <li class="nav-item active">
+                    <a class="nav-link text-white" href="{% url 'follows_tickets' %}">FollowsTickets <span
+                            class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link text-white" href="{% url 'follows_reviews' %}">FollowsReviews <span
+                            class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link text-white" href="{% url 'online_follows' %}">OnlineFollows <span
+                            class="sr-only">(current)</span></a>
+                </li>
             </ul>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
@@ -39,6 +51,9 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white" href="{% url 'user-login' %}">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="{% url 'password_reset' %}">ForgottenPassword</a>
                 </li>
             </ul>
             {% endif %}
