--- a/LITReview/feeds/templates/review_form.html
+++ b/LITReview/feeds/templates/review_form.html
@@ -7,19 +7,19 @@
 <form method="POST" action="{% url 'index' %}">
 {% csrf_token %}
   <div class="form-group">
-    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+    <input type="text" required class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
            placeholder="Enter Rating" name="rating">
   </div>
   <div class="form-group">
-    <input type="text" class="form-control" id="exampleInputEmail2" aria-describedby="emailHelp"
+    <input type="text" required class="form-control" id="exampleInputEmail2" aria-describedby="emailHelp"
            placeholder="Enter Headline" name="headline">
   </div>
   <div class="form-group">
-    <input type="text" class="form-control" id="exampleInputPassword1"
+    <input type="text" required class="form-control" id="exampleInputPassword1"
            placeholder="Enter Body" name="body">
   </div>
   <div class="form-check">
-    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+    <input type="checkbox" required class="form-check-input" id="exampleCheck1">
     <label class="form-check-label" for="exampleCheck1">Confirm the Review</label>
   </div>
   <input type="hidden" name="ticket" value="{{ ticket_id }}" />
