--- a/LITReview/feeds/templates/ticket_form.html
+++ b/LITReview/feeds/templates/ticket_form.html
@@ -7,11 +7,11 @@
 <form method="POST" action="{% url 'index' %}">
 {% csrf_token %}
   <div class="form-group">
-    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+    <input type="text" required class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
            placeholder="Enter Title" name="title">
   </div>
   <div class="form-group">
-    <input type="text" class="form-control" id="exampleInputEmail2" aria-describedby="emailHelp"
+    <input type="text" required class="form-control" id="exampleInputEmail2" aria-describedby="emailHelp"
            placeholder="Enter Description" name="description">
   </div>
   <div class="form-group">
@@ -19,7 +19,7 @@
            placeholder="Enter Image" name="image">
   </div>
   <div class="form-check">
-    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+    <input type="checkbox" required class="form-check-input" id="exampleCheck1">
     <label class="form-check-label" for="exampleCheck1">Confirm the Ticket</label>
   </div>
   <input type="hidden" name="ticket" value="1" />
