[ModifyAbility, FrontEnd] restants

--- a/LITReview/feeds/templates/submitted_reviews.html
+++ b/LITReview/feeds/templates/submitted_reviews.html
@@ -35,7 +35,13 @@
         <div><i id="ticket_user">From {{ ticket.user }}, </i>
         <i id="ticket_time_created">at {{ ticket.time_created }} </i>
         <i id="ticket_title" >for {{ ticket.title }}. </i>
-        <i id="ticket_description">Query : {{ ticket.description }} </i>
+        <i id="ticket_description">Query : {{ ticket.description }} <br></i>
+        {% if ticket.image %}
+             <img src="{{ ticket.image.url }}" height="300" width="600">
+        {% endif %}
+        {% if not ticket.image %}
+            <img src="/media/image-not-found-1-scaled-1150x647.png" height="300" width="600">
+        {% endif %}
         {% for review in reviews %}
             {% if forloop.counter == reviews|length %}
                 <div class="spoiler">
