--- a/LITReview/feeds/templates/follows_tickets.html
+++ b/LITReview/feeds/templates/follows_tickets.html
@@ -37,7 +37,13 @@
                 <div><i id="ticket_user">From {{ ticket.user }}, </i>
                 <i id="ticket_time_created">at {{ ticket.time_created }} </i>
                 <i id="ticket_title" >for {{ ticket.title }}. </i>
-                <i id="ticket_description">Query : {{ ticket.description }} </i>
+                <i id="ticket_description">Query : {{ ticket.description }}  <br></i>
+                {% if ticket.image %}
+                     <img src="{{ ticket.image.url }}" height="300" width="600">
+                {% endif %}
+                {% if not ticket.image %}
+                    <img src="/media/image-not-found-1-scaled-1150x647.png" height="300" width="600">
+                {% endif %}
                 <div class="spoiler">
                 <b>Click here to add reviews to your follow ticket no matter if there already are or not. </b>
                 <div style="visibility:hidden;height:0">
