--- a/LITReview/feeds/templates/partials/nav.html
+++ b/LITReview/feeds/templates/partials/nav.html
@@ -36,7 +36,7 @@
             </ul>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link text-white" href="{% url 'index' %}">{{ user.username }} Profile
+                    <a class="nav-link text-white" href="{% url 'user-profile' %}">{{ user.username }} Profile
                         <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
