--- a/LITReview/feeds/templates/review_form_3.html
+++ b/LITReview/feeds/templates/review_form_3.html
@@ -8,7 +8,7 @@
 {% csrf_token %}
   <div class="form-group">
     <input type="text" required class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-           placeholder="Enter Rating" name="rating">
+           placeholder="Enter 5 Rank Rating" name="rating">
   </div>
   <div class="form-group">
     <input type="text" required class="form-control" id="exampleInputEmail2" aria-describedby="emailHelp"
