--- a/LITReview/feeds/templates/ticket_form.html
+++ b/LITReview/feeds/templates/ticket_form.html
@@ -4,7 +4,7 @@
     <title>Title</title>
 </head>
 <body>
-<form method="POST" action="{% url 'index' %}">
+<form method="POST" action="{% url 'index' %}" enctype="multipart/form-data">
 {% csrf_token %}
   <div class="form-group">
     <input type="text" required class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
@@ -15,8 +15,8 @@
            placeholder="Enter Description" name="description">
   </div>
   <div class="form-group">
-    <input type="text" class="form-control" id="exampleInputPassword1"
-           placeholder="Enter Image" name="image">
+    <b>Choose an image: </b><br>
+    {{ ticket_form.image }}
   </div>
   <div class="form-check">
     <input type="checkbox" required class="form-check-input" id="exampleCheck1">
