--- a/LITReview/feeds/templates/user/profile.html
+++ b/LITReview/feeds/templates/user/profile.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="row my-4">
     <div class="col-md-4"></div>
-    <div class="col-md-8">
+    <div class="col-md-8" style="min-width:100%">
         <div class="card">
             <div class="card-header bg-info text-white">
                 Customer Detail Page
@@ -13,7 +13,7 @@
                 <div class="col-md-8">
                     <table class="table table-borderless">
                         <thead>
-                            <span class="h4">Porfile Information</span class="h4">
+                            <span class="h4">Profile Information</span class="h4">
                             <a class="btn btn-info btn-sm float-right" href="{% url 'user-profile-update' %}">Edit</a>
                             <hr>
                         </thead>
