--- a/LITReview/feeds/templates/user/profile_update.html
+++ b/LITReview/feeds/templates/user/profile_update.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="row my-4">
     <div class="col-md-4"></div>
-    <div class="col-md-8">
+    <div class="col-md-8" style="min-width:100%">
         <div class="card">
             <div class="card-header bg-info text-white">
                 Customer Detail Page
