[ModifyPosts, FrontEnd] restants

--- a/LITReview/feeds/templates/online_follows.html
+++ b/LITReview/feeds/templates/online_follows.html
@@ -15,14 +15,29 @@
     <div style="visibility:hidden;height:0">
     {% include 'unfollow_form.html' %}</div></div><hr>
     <b>Online people that I follow : </b>
-    {% if not connected_follows %}
-        <li>There is nobody who's online among the people that you follow.</li>
-    {% elif connected_follows %}
-        {% for follow in connected_follows %}
-        <ul class="follows_datas">
-            <li><i>{{ follow }}</i></li></ul>
+    <ul class="follows_datas">
+        {% if not connected_follows %}
+            <li>There is nobody who's online among the people that you follow.</li>
+        {% elif connected_follows %}
+            {% for follow in connected_follows %}
+                <li><i>{{ follow }}</i></li>
+            {% endfor %}
+        {% endif %}
+    </ul>
+    <b>All the people that I follow : </b>
+    <ul class="follows_datas">
+        {% if followings_count == 0 %}
+            <li>There isn't any user that you follow yet. </li>
+        {% endif %}
+        {% for follow in user_follows %}
+            {% if follow.user == user %}
+                <li><i>{{follow.followed_user}}</i></li>
+            {% endif %}
         {% endfor %}
-    {% endif %}
+        {% if not user_follows %}
+            <li>There isn't any user that you follow yet. </li>
+        {% endif %}
+    </ul>
 <script>
     var spoilers = document.getElementsByClassName("spoiler");
     var spoilClick = function(){
