--- a/LITReview/feeds/templates/partials/nav.html
+++ b/LITReview/feeds/templates/partials/nav.html
@@ -33,6 +33,10 @@
                     <a class="nav-link text-white" href="{% url 'online_follows' %}">OnlineFollows <span
                             class="sr-only">(current)</span></a>
                 </li>
+                <li class="nav-item active">
+                    <a class="nav-link text-white" href="{% url 'create_ticket' %}">CreateTicket <span
+                            class="sr-only">(current)</span></a>
+                </li>
             </ul>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
