[ModifyPosts, FrontEnd] restants

--- a/LITReview/feeds/templates/create_ticket.html
+++ b/LITReview/feeds/templates/create_ticket.html
@@ -7,7 +7,7 @@
 <body>
 {% block content %}
     <div><h4>Welcome {{user}}, here is the ticket from, <br>
-    from which you can submit your tickets. </h4></div><hr>
+    from which you can create your tickets. </h4></div><hr>
     <div>{% include 'ticket_form.html' %}</div>
 {% endblock %}
 </body>
