--- a/LITReview/feeds/templates/partials/nav.html
+++ b/LITReview/feeds/templates/partials/nav.html
@@ -34,7 +34,7 @@
                             class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link text-white" href="{% url 'create_ticket' %}">CreateTicket <span
+                    <a class="nav-link text-white" href="{% url 'create_ticket' %}">CreateYourTickets <span
                             class="sr-only">(current)</span></a>
                 </li>
             </ul>
